--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 body{
-    margin-left: 20px;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 .h1New{
@@ -88,3 +92,6 @@ h2{
     /*background-color: red;*/
 }
 
+.butDesignSmall{
+    display: none;
+}
