--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
 body{
     position: absolute;
-    top: 65%;
+    top: 5%;
     left: 50%;
+    height: 100px;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    margin-left: 50px;
 }
-
 .h1New{
     color: #899192;
     font-size: 42pt;
