--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 .h1New{
     color: #899192;
     font-size: 42pt;
+    margin: 0px;
 }
 
 h2{
@@ -31,6 +32,7 @@ h2{
     height: 40px;
     width: 200px;
     margin-top: 20px;
+    margin-left: 25px;
 }
 
 .wrapper{
