--- a/smallScreen.css
+++ b/smallScreen.css
@@ -1,22 +1,24 @@
-@media only screen and (max-width: 896px) and (min-width : 320px) {
-    
+@media only screen and (max-width:860px) and (min-width : 320px) {
+
+    body{
+        margin-left: 0px;
+    }
+
     .grid{
         display: grid;
         grid-template-columns: 100%;
-        grid-column-gap: 10px;
-        grid-row-gap: 1em;
+        height: 100%;
+        width: 100%;
     }
 
     .weatherBlock{
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 1fr 1fr;
         width: 100%;
         background-color: #a7afb1;
         font-family: "Roboto";
         color: white;
-        margin-bottom: 10px;
         height: 100%;
-        margin-right: 55px;
         font-size: 45pt;
     }
 
@@ -42,12 +44,15 @@
         font-family: "Roboto";
         font-size: 48pt;
         color: #8e999f;
+
+        text-align: left;
     }
 
     .hat{
         display: grid;
-        grid-template-columns: 250px 125px auto auto;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-column-gap: 20px;
+        margin-bottom: 100px;
     }
 
     .tempPsmall{
@@ -84,9 +89,16 @@
     }
 
     .h1New{
+        margin-top: 20px;
         color: #899192;
         font-size: 48pt;
         width: 400px;
+    }
+
+    h3{
+        font-family: "Roboto";
+        font-size: 24pt;
+        color: #8e999f;
     }
 
     .PforCity{
@@ -121,9 +133,9 @@
         color: #8e999f;
         border: 0ch;
         background-color: #c9d2d7;
-        height: 80px;
-        width: 500px;
-        font-size: 36pt;
+        height: 60px;
+        width: 200px;
+        font-size: 18pt;
         margin-top: 20px;
     }
     textarea{
