--- a/smallScreen.css
+++ b/smallScreen.css
@@ -19,7 +19,8 @@
         font-family: "Roboto";
         color: white;
         height: 100%;
-        font-size: 45pt;
+        font-size: 24pt;
+        margin-top: 0px;
     }
 
     .weatherData{
@@ -50,9 +51,9 @@
 
     .hat{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: auto auto auto auto;
         grid-column-gap: 20px;
-        margin-bottom: 100px;
+        margin-bottom: 0px;
     }
 
     .tempPsmall{
@@ -67,9 +68,13 @@
         margin-top: 25px;
         float: left;
     }
+
+    .wrapper{
+        margin-bottom: 0px;
+    }
     
     .tempP{
-        font-size: 163pt;
+        font-size: 89pt;
         font-family: "Roboto";
         color: #8e999f;
     }
@@ -83,7 +88,7 @@
     .imgExit{
         height: 60px;
         width: 60px;
-        margin-top: 5px;
+        margin-top: -25px;
         margin-left: 5px;
         transform: rotate(45deg);
     }
@@ -91,8 +96,13 @@
     .h1New{
         margin-top: 20px;
         color: #899192;
-        font-size: 48pt;
+        font-size: 38pt;
         width: 400px;
+    }
+
+    button{
+        height: 100px;
+        width: 100px;
     }
 
     h3{
@@ -134,8 +144,8 @@
         border: 0ch;
         background-color: #c9d2d7;
         height: 60px;
-        width: 200px;
-        font-size: 18pt;
+        width: 60px;
+        font-size: 8pt;
         margin-top: 20px;
     }
     textarea{
