--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@ h2{
     margin-top: 32px;
 }
 
+input[type="text"] {
+    background-color: #f1f1f1;
+    border: 0px;
+}
+
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
