--- a/mobile.css
+++ b/mobile.css
@@ -17,7 +17,7 @@ and (max-device-width : 667px){
         color: white;
         margin-bottom: 10px;
         height: 100px;
-        margin-right: 55px;
+        margin-right: 0px;
         font-size: 45pt;
         margin-top: 0px;
     }
@@ -86,6 +86,10 @@ and (max-device-width : 667px){
         margin-top: 5px;
         margin-left: 5px;
         transform: rotate(45deg);
+    }
+
+    .CityStyle{
+        font-size: 48pt;
     }
 
     .h1New{
