--- a/smallScreen.css
+++ b/smallScreen.css
@@ -21,6 +21,7 @@
         height: 100%;
         font-size: 24pt;
         margin-top: 0px;
+        margin-right: 0px;
     }
 
     .weatherData{
@@ -54,6 +55,7 @@
         grid-template-columns: auto auto auto auto;
         grid-column-gap: 20px;
         margin-bottom: 0px;
+        height: 150px;
     }
 
     .tempPsmall{
