--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+html{
+    overflow-x:hidden;
+}
+
 body{
     position: absolute;
     top: 5%;
