--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ h2{
 input[type="text"] {
     background-color: #f1f1f1;
     border: 0px;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .grid{
