--- a/search.css
+++ b/search.css
@@ -2,22 +2,20 @@
     /*justify-self: right;*/
     height: 40px;
     width: 300px;
-    background-color: #f1f1f1;
 
     align-content:center;
 
     align-self:center;
 
     display: grid;
-    grid-template-columns: 300px 100px;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 48px;
 }
 
 .PforCity{
     text-align: left;
-    padding-top: 10px;
-    padding-left: 15px;
-    margin-right: 50px;
-    color: #c7ccce;
+    padding-top: 0px;
+    padding-left: 0px;
 }
 
 .imgPlus{
@@ -52,13 +50,15 @@
 }
 
 button{
-    color: white;
+    color: black;
     background-color: white;
-    margin: 0em;
-    padding: 0px 0px;
-    border-width: 0px;
-    border-color: white;
-    height: 50px;
+    width: 40px;
+    height: 40px;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 63px;
+    font-size: 12pt;
+    justify-self: self-end;
 }
 
 .imgExit{
