--- a/smallScreen.css
+++ b/smallScreen.css
@@ -1,7 +1,13 @@
-@media only screen and (max-width:860px) and (min-width : 320px) {
+@media only screen and (max-width:970px) and (min-width : 310px) {
 
     body{
         margin-left: 0px;
+        position:relative;
+        top: 0%;
+        left: 0%;
+        height: 0px;
+        margin-right: 0px;
+        transform: none;
     }
 
     .grid{
@@ -105,7 +111,10 @@
     button{
         height: 100px;
         width: 100px;
+        font-size: 26pt;
+        border-radius: 63px;
     }
+    
 
     h3{
         font-family: "Roboto";
@@ -132,6 +141,7 @@
     
         display: grid;
         grid-template-columns: 75% 25%;
+        grid-column-gap: 122px;
     }
 
     .imgPlus{
