--- a/smallScreen.css
+++ b/smallScreen.css
@@ -25,7 +25,7 @@
         font-family: "Roboto";
         color: white;
         height: 100%;
-        font-size: 24pt;
+        font-size: 12pt;
         margin-top: 0px;
         margin-right: 0px;
     }
@@ -61,24 +61,25 @@
         grid-template-columns: auto auto auto auto;
         grid-column-gap: 20px;
         margin-bottom: 0px;
-        height: 150px;
+        height: 83px;
     }
 
     .tempPsmall{
-        font-size: 52pt;
+        font-size: 14pt;
         font-family: "Roboto";
         color: #8e999f;
     }
 
     .imgClassBig{
-        height: 200px;
-        width: 200px;
+        height: 100px;
+        width: 100px;
         margin-top: 25px;
         float: left;
     }
 
     .wrapper{
         margin-bottom: 0px;
+        grid-template-columns: 50% 50%;
     }
     
     .tempP{
@@ -104,13 +105,13 @@
     .h1New{
         margin-top: 20px;
         color: #899192;
-        font-size: 38pt;
+        font-size: 16pt;
         width: 400px;
     }
 
     button{
-        height: 100px;
-        width: 100px;
+        height: 50px;
+        width: 50px;
         font-size: 26pt;
         border-radius: 63px;
     }
@@ -118,7 +119,7 @@
 
     h3{
         font-family: "Roboto";
-        font-size: 24pt;
+        font-size: 12pt;
         color: #8e999f;
     }
 
@@ -131,7 +132,7 @@
 
     .rghtCentringToRight{
         justify-self: left;
-        height: 160px;
+        height: 55px;
         width: 75%;
         background-color: #f1f1f1;
         margin-left: 15px;
@@ -141,7 +142,7 @@
     
         display: grid;
         grid-template-columns: 75% 25%;
-        grid-column-gap: 122px;
+        grid-column-gap: 59px;
     }
 
     .imgPlus{
@@ -156,7 +157,7 @@
         border: 0ch;
         background-color: #c9d2d7;
         height: 60px;
-        width: 60px;
+        width: 68px;
         font-size: 8pt;
         margin-top: 20px;
     }
