--- a/search.css
+++ b/search.css
@@ -1,5 +1,5 @@
 .rghtCentringToRight{
-    /*justify-self: right;*/
+    justify-self: right;
     height: 40px;
     width: 300px;
 
@@ -8,8 +8,9 @@
     align-self:center;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 48px;
+    grid-template-columns: 70% 30%;
+    grid-column-gap: 0px;
+
 }
 
 .PforCity{
@@ -58,7 +59,7 @@ button{
     border-color: black;
     border-radius: 63px;
     font-size: 12pt;
-    justify-self: self-end;
+    justify-self: center;
 }
 
 .imgExit{
